--- a/templates/index.html
+++ b/templates/index.html
@@ -13,38 +13,18 @@
     <div class="container">
       <div class="lhs">
         <form action="/" method="POST">
-          <label for="username">Username:</label>
-          <input
-            type="text"
-            id="username"
-            name="username"
-            required
-            spellcheck="false"
-          />
+          <label>Username:</label>
+          <input type="text" name="username" required spellcheck="false" />
           <br />
-          <label for="password">Password:</label>
-          <input type="password" id="password" name="password" required />
+          <label>Password:</label>
+          <input type="password" name="password" required />
           <br />
 
-          <label for="folowing">no.of following:</label>
-          <input
-            type="number"
-            id="folowing"
-            name="folowing"
-            min="0"
-            max="7000"
-            required
-          />
+          <label>no.of following:</label>
+          <input type="number" name="folowing" min="0" max="7000" required />
           <br />
-          <label for="folowers">no.of followers:</label>
-          <input
-            type="number"
-            id="folowers"
-            name="folowers"
-            min="0"
-            max="7000"
-            required
-          />
+          <label>no.of followers:</label>
+          <input type="number" name="folowers" min="0" max="7000" required />
           <br />
           <button type="submit">Generate</button>
         </form>
