--- a/static/styles.css
+++ b/static/styles.css
@@ -68,3 +68,10 @@ button {
   /*  background-color: yellow;
 */
 }
+
+@media screen and (max-width: 766px) {
+  .container {
+    grid-template-columns: 1fr;
+  }
+
+}
