--- a/static/styles.css
+++ b/static/styles.css
@@ -4,11 +4,32 @@ body {
   width: 100vw;
   height: 100vh;
 
+  color: white;
   font-family: "Trebuchet MS", sans-serif;
+  font-style: italic;
+  /*
   background: url("images/bgm.jpg") no-repeat;
   background-position: bottom;
   background-size: cover;
+  */
+  
+  background: linear-gradient(300deg, #00bfff, purple, gold,#ff4c68);
+  background-size: 180% 180%;
+  animation: gradient-animation 18s ease infinite;
+
   overflow: hidden;
+}
+
+@keyframes gradient-animation {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
 }
 
 h1 {
@@ -54,12 +75,27 @@ button {
   width: 10vw;
   font-size: 3vh;
   padding: 10px;
-  margin-left: 20vw;
+  margin-top: 3vw;
   border: none;
+  border-radius: 5px;
+  box-shadow: rgb(38, 57, 77) 0 2vh 3vh -1vh;
 }
 
 .rhs {
+  padding-top: 20vh;
   height: inherit;
+  overflow: auto;
   /*  background-color: yellow;
 */
+}
+
+@media screen and (max-width: 766px) {
+  .container {
+    grid-template-columns: 1fr;
+  }
+
+  button {
+  width: 20vw;
+  }
+
 }
