--- a/templates/index.html
+++ b/templates/index.html
@@ -5,13 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Insta nonFollowers</title>
     <link rel="stylesheet" href="../static/styles.css" />
-    <link rel="icon" href="favicon.png" />
+    <link rel="icon" href="../static/images/favicon.png" />
   </head>
 
   <body>
-    <h1>notAlan's insta project</h1>
     <div class="container">
       <div class="lhs">
+        <h1>notAlan's selenium project</h1>
+
         <form action="/" method="POST">
           <label>Username:</label>
           <input type="text" name="username" required spellcheck="false" />
@@ -20,18 +21,21 @@
           <input type="password" name="password" required />
           <br />
 
-          <label>no.of following:</label>
-          <input type="number" name="folowing" min="0" max="7000" required />
-          <br />
           <label>no.of followers:</label>
           <input type="number" name="folowers" min="0" max="7000" required />
           <br />
-          <button type="submit">Generate</button>
+          <label>no.of following:</label>
+          <input type="number" name="folowing" min="0" max="7000" required />
+          <br />
+
+          <button>Find</button><!-- type="submit" by default -->
         </form>
       </div>
 
       <div class="rhs">
-        <p>ans is {{ ans }}</p>
+        {% for user in nonfollowers %}
+          <a href="https://www.instagram.com/{{ user }}/">{{ user }}</a><br><br>
+        {% endfor %}
       </div>
     </div>
 
