--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,7 @@
   <body>
     <div class="container">
       <div class="lhs">
-        <h1>notAlan's selenium project</h1>
+        <h1>notAlan selenium project</h1>
 
         <form action="/" method="POST">
           <label>Username:</label>
